* Code cleanups * Removed applyThirdDateConstraint